@@ -13,12 +13,33 @@ plugins {
     id("net.echonolix.slang-gradle-plugin") version "0.0.1"
     id("net.echonolix.caelum-struct") version "1.0-SNAPSHOT"
     id("dev.luna5ama.jar-optimizer") version "1.2.2"
+    id("me.champeau.jmh") version "0.7.3"
+}
+jmh {
+    includes.add("Device")
+    jvmArgs.set(listOf("-Dfile.encoding=UTF-8", "--enable-native-access=ALL-UNNAMED"))
+    javaToolchains {
+        jvm.set(launcherFor {
+            languageVersion.set(JavaLanguageVersion.of(24))
+        }.get().executablePath.asFile.absolutePath)
+    }
 }
 
 dependencies {
+    implementation("org.openjdk.jmh:jmh-core:1.37")
+    implementation("org.openjdk.jmh:jmh-generator-annprocess:1.37")
     implementation("net.echonolix:caelum-core:1.0-SNAPSHOT")
     implementation("net.echonolix:caelum-vulkan:1.0-SNAPSHOT")
     implementation("net.echonolix:caelum-glfw-vulkan:1.0-SNAPSHOT")
+
+    val lwjglVersion = "3.3.6"
+    val lwjglNatives = "natives-windows"
+    jmhImplementation(platform("org.lwjgl:lwjgl-bom:$lwjglVersion"))
+    jmhImplementation("org.lwjgl", "lwjgl")
+    jmhImplementation("org.lwjgl", "lwjgl-vulkan")
+    jmhImplementation("org.lwjgl", "lwjgl-glfw")
+    jmhRuntimeOnly("org.lwjgl", "lwjgl", classifier = lwjglNatives)
+    jmhRuntimeOnly("org.lwjgl", "lwjgl-glfw", classifier = lwjglNatives)
 }
 
 java {
@@ -35,12 +56,12 @@ kotlin {
     }
 }
 
-//slang {
-//    compilerOptions {
-//        debug.set(true)
-//        extraOptions.add("-fvk-use-entrypoint-name")
-//    }
-//}
+slang {
+    compilerOptions {
+        debug.set(true)
+        extraOptions.add("-fvk-use-entrypoint-name")
+    }
+}
 
 val fatJar by tasks.registering(Jar::class) {
     archiveClassifier.set("fat")
@@ -49,7 +70,7 @@ val fatJar by tasks.registering(Jar::class) {
 
     manifest {
         attributes(
-            "Main-Class" to "net.echonolix.vktest.VkTestKt",
+            "Main-Class" to "net.echonolix.example.VkTestKt",
         )
     }
 }
@@ -64,7 +85,7 @@ project.afterEvaluate {
     }
 }
 
-val optimizeFatJar = jarOptimizer.register(fatJar, "net.echonolix.vktest")
+val optimizeFatJar = jarOptimizer.register(fatJar, "net.echonolix.example")
 
 artifacts {
     archives(optimizeFatJar)
